force-app/main/default/objects/Campaign_Detail_Setting__mdt/fields/Campaign_Selector_Query__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Selector_Query__c</fullName>
    <description>MERGE FIELDS:
#userid#</description>
    <label>Campaign Selector Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>