force-app/main/default/objects/Campaign_Detail_Setting__mdt/fields/Related_List_Config__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Config__c</fullName>
    <description>LISTS: 
[{
  Label,
  Query,
  Columns,
  FieldAliases: [{NewFieldName, FieldName}],
  LayoutColumnOrder,
  NewButton: {Label, ObjectName, RecordTypeId, FormLabel, FormURL}
 }]


MERGE FIELDS:
#userid#
#campaignid#
#campaign__startdate__year#
#campaign__enddate__year#</description>
    <label>Related List Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>